fixed grid on small devices

--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -54,7 +54,7 @@
     column-gap: 1.5rem;
   }
 }
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 850px) {
   .content {
     grid-template-columns: 1fr;
   }
